--- a/app/src/main/res/layout/prescription_list_item.xml
+++ b/app/src/main/res/layout/prescription_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="18dp"
@@ -11,69 +12,96 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/precription_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:id="@+id/precription_name_docteur"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:text="TextView"
+            android:textColor="@color/title_shadow"
+            android:textSize="@dimen/title"
+            app:layout_constraintEnd_toStartOf="@+id/prescription_status"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/prescription_at" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/prescription_at"
+            android:id="@+id/prescription_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/green_badge"
+            android:paddingBottom="4dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:paddingTop="4dp"
             android:text="TextView"
-            android:textSize="11sp"
+            android:textAlignment="center"
+            android:textColor="#fff"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/prescription_occurence_type"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/prescription_at" />
-
-        <TextView
-            android:id="@+id/prescription_dosage"
+            android:id="@+id/prescription_give_at"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:layout_weight="1"
             android:text="TextView"
-            android:textAlignment="center"
-            app:layout_constraintStart_toEndOf="@+id/precription_name"
-            app:layout_constraintTop_toBottomOf="@+id/prescription_at" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/precription_name_docteur" />
+
+        <TextView
+            android:id="@+id/prescription_stroke"
+            android:layout_width="0dp"
+            android:layout_height="3dp"
+            android:layout_marginEnd="250dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:background="#78d1b2"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prescription_give_at" />
+
+        <TextView
+            android:id="@+id/prescription_medicament_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="TextView"
+            android:textColor="@color/body_text"
+            android:textSize="@dimen/body_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prescription_stroke" />
+
+        <TextView
+            android:id="@+id/prescription_prise"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            android:text="Prise :"
+            android:textColor="@color/body_text"
+            android:textSize="@dimen/body_text"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/prescription_medicament_name" />
 
         <TextView
             android:id="@+id/prescription_occurence"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toStartOf="@+id/prescription_occurence_type"
-            app:layout_constraintTop_toBottomOf="@+id/prescription_at" />
-
-        <TextView
-            android:id="@+id/prescription_side_effect"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="5dp"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/precription_name" />
+            app:layout_constraintTop_toBottomOf="@+id/prescription_prise" />
+
     </android.support.constraint.ConstraintLayout>
 
 </android.support.v7.widget.CardView>
