--- a/app/src/main/res/layout/activity_traitement_detail.xml
+++ b/app/src/main/res/layout/activity_traitement_detail.xml
@@ -33,12 +33,12 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.403"
-                app:layout_constraintStart_toEndOf="@+id/home_arrow"
+                app:layout_constraintStart_toEndOf="@+id/button_home"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="@string/resum" />
 
             <ImageButton
-                android:id="@+id/home_arrow"
+                android:id="@+id/button_home"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_marginStart="24dp"
