[DEV] clean project

--- a/app/src/main/res/layout/recap_activity.xml
+++ b/app/src/main/res/layout/recap_activity.xml
@@ -25,6 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="116dp"
                 android:layout_marginTop="20dp"
+                android:fontFamily="@font/gilroy_extra_bold"
                 android:text="@string/resum"
                 android:textAlignment="center"
                 android:textColor="@color/title_shadow"
@@ -54,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/gilroy_extra_bold"
         android:text="@string/thank"
         android:textColor="@color/title_shadow"
         android:textSize="@dimen/title"
@@ -67,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/gilroy_extra_bold"
         android:text="@string/end_consultation"
         android:textColor="@color/title_shadow"
         android:textSize="@dimen/title"
@@ -80,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/gilroy_extra_bold"
         android:text="@string/recap_symptome"
         android:textColor="@color/title_shadow"
         android:textSize="@dimen/title"
@@ -94,6 +98,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/gilroy_light"
         android:textColor="#0a2239"
         android:textSize="@dimen/body_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,6 +113,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="#78d1b2"
+        android:fontFamily="@font/gilroy_light"
         android:text="@string/remind_me"
         android:textColor="#fff"
         app:layout_constraintEnd_toEndOf="parent"
@@ -148,6 +154,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/gilroy_extra_bold"
         android:text="@string/traitement"
         android:textColor="@color/title_shadow"
         android:textSize="@dimen/title"
@@ -162,6 +169,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:fontFamily="@font/gilroy_light"
         android:textColor="#0a2239"
         android:textSize="@dimen/body_text"
         app:layout_constraintEnd_toEndOf="parent"
