--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,10 @@ tools:layout_editor_absoluteY="25dp">
     android:id="@+id/tabs_main"
     android:layout_width="0dp"
     android:layout_height="56dp"
-    android:background="#73f5c7"
+    android:background="#f5f5f5"
+    android:elevation="20dp"
+    app:itemIconTint="@color/tab_item_foreground"
+    app:itemTextColor="@color/tab_item_foreground"
     app:elevation="4dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
