--- a/app/src/main/res/layout/prescription_list_fragment.xml
+++ b/app/src/main/res/layout/prescription_list_fragment.xml
@@ -29,6 +29,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="28dp"
+            android:fontFamily="@font/gilroy_extra_bold"
             android:text="@string/follow"
             android:textAlignment="textStart"
             android:textColor="#fff"
