--- a/app/src/main/res/layout/prescription_list_item.xml
+++ b/app/src/main/res/layout/prescription_list_item.xml
@@ -19,6 +19,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
+            android:fontFamily="@font/gilroy_light"
             android:text="TextView"
             android:textColor="@color/title_shadow"
             android:textSize="@dimen/title"
@@ -33,6 +34,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
             android:background="@drawable/green_badge"
+            android:fontFamily="@font/gilroy_light"
             android:paddingBottom="4dp"
             android:paddingLeft="8dp"
             android:paddingRight="8dp"
@@ -49,6 +51,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:fontFamily="@font/gilroy_light"
             android:text="TextView"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/precription_name_docteur" />
@@ -72,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/gilroy_extra_bold"
             android:text="TextView"
             android:textColor="@color/body_text"
             android:textSize="@dimen/body_text"
@@ -84,6 +88,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
+            android:fontFamily="@font/gilroy_extra_bold"
             android:text="Prise :"
             android:textColor="@color/body_text"
             android:textSize="@dimen/body_text"
@@ -97,6 +102,7 @@
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="5dp"
+            android:fontFamily="@font/gilroy_light"
             android:text="TextView"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
