--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -13,7 +13,7 @@
 
     <item
         android:id="@+id/prescription"
-        android:icon="@drawable/ic_content_copy_24px"
+        android:icon="@drawable/ic_file_alt"
         android:title="@string/menu_follow" />
 
 </menu>
