--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="title">18dp</dimen>
     <dimen name="body_text">16dp</dimen>
+    <dimen name="detail_list_spacer">8sp</dimen>
 </resources>
