--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -13,11 +13,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
-        android:background="@drawable/green_badge"
-        android:fontFamily="@font/gilroy_light"
+        android:background="#78d1b2"
+        android:fontFamily="@font/gilroy_extra_bold"
         android:padding="12dp"
         android:text="@string/end_call"
         android:textColor="@color/cardview_light_background"
+        android:textSize="@dimen/title"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/call_practitioner" />
