--- a/app/src/main/res/layout/recap_activity.xml
+++ b/app/src/main/res/layout/recap_activity.xml
@@ -107,43 +107,52 @@
 
     <Button
         android:id="@+id/recap_remind_me"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="#78d1b2"
-        android:fontFamily="@font/gilroy_light"
+        android:fontFamily="sans-serif"
         android:text="@string/remind_me"
+        android:textAllCaps="false"
         android:textColor="#fff"
+        android:textSize="@dimen/title"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recap_traitement" />
 
     <Button
         android:id="@+id/recap_drug"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="#78d1b2"
         android:text="@string/recap_drug_store"
+        android:textAllCaps="false"
         android:textColor="#fff"
+        android:textSize="@dimen/title"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recap_remind_me" />
 
     <Button
         android:id="@+id/recap_glp"
-        android:layout_width="180dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="#78d1b2"
         android:text="@string/it_ok"
+        android:textAllCaps="false"
         android:textColor="#fff"
+        android:textSize="@dimen/title"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/recap_drug" />
