--- a/app/src/main/res/layout/activity_traitement_detail.xml
+++ b/app/src/main/res/layout/activity_traitement_detail.xml
@@ -123,13 +123,13 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/gilroy_extra_bold"
-                    android:text="@string/side_effect"
+                    android:text="@string/resum"
                     android:textColor="@color/title_shadow"
                     android:textSize="@dimen/title"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/traitement_detail_indication"
+                    android:id="@+id/traitement_detail_symptome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -160,13 +160,13 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/gilroy_extra_bold"
-                    android:text="@string/resum"
+                    android:text="@string/side_effect"
                     android:textColor="@color/title_shadow"
                     android:textSize="@dimen/title"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/traitement_detail_symptome"
+                    android:id="@+id/traitement_detail_indication"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
@@ -198,7 +198,7 @@
                     android:layout_marginLeft="8dp"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/gilroy_extra_bold"
-                    android:text="@string/side_effect"
+                    android:text="@string/indication"
                     android:textColor="@color/title_shadow"
                     android:textSize="@dimen/title"
                     android:textStyle="bold" />
